[package]
name = "wormrtl"
version = "0.1.0"
authors = ["Hans-Christian Esperer <hc@hcesperer.org>"]
edition = "2018"

[lib]
name = "wormrtl"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

